# PortableBitfields

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md
src/jungles/: bitfield.hpp  bitfield_config.hpp  bitfield_mapping.hpp  bitfields.hpp  preprocessor_map.hpp
tests/: CMakeLists.txt  dependencies.cmake  helpers.hpp  llvm_toolchain_file.cmake  static_assertion_test.cpp.in  test_const.cpp  test_deserializing.cpp  test_extracting.cpp  test_field_maxwidth.cpp  test_little_endian_serializing.cpp  test_operations_on_bitfields.cpp  test_overflow.cpp  test_serializing.cpp  test_setting_fields.cpp  test_various_id_types.cpp  test_zero_initialized.cpp
